--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   scraper:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: dockerfiles/Dockerfile
     volumes:
       - .:/app
       - ./logs:/app/logs
@@ -12,7 +12,7 @@ services:
   fastapi_app:
     build:
       context: .
-      dockerfile: Dockerfile.fastapi
+      dockerfile: dockerfiles/Dockerfile.fastapi
     ports:
       - "8000:8000"
     volumes:
